# moneyforward-scraping-py

./: .flake8  .gitignore  pyproject.toml
mfscraping/: __init__.py  exceptions.py
